Hotfixes for the example css overflow issue

--- a/examples/chat/client/app.less
+++ b/examples/chat/client/app.less
@@ -224,6 +224,7 @@ a:hover {
 .chat__messages {
   list-style-type: none;
   padding: @baseline / 2;
+  overflow: auto;
 }
 
 .chat__messages__item {
